--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
                                     <h2>¿Por qué los ingenieros en sistemas son imprescindibles en la actualidad?</h2>
                                     <!-- Post Excerpt -->
                                     <p>
-                                   Los ingenieros de sistemas son los responsables del funcionamiento adecuado de todo el sistema. Se implican en la investigación y el diseño, la fabricación, reparaciones, mantenimiento y marketing. En la actualidad y en la era cibernética en la que vivimos, esta prefesión cada vez es más importante y necesaria en todos los ámbitos.
+                                   Los ingenieros de sistemas son los responsables del funcionamiento adecuado de todo el sistema. Se implican en la investigación y el diseño, la fabricación, reparaciones, mantenimiento y marketing. En la actualidad y en la era cibernética en la que vivimos, esta profesión cada vez es más importante y necesaria en todos los ámbitos.
                                     </p>
                                     <!-- Read More btn -->
                                     <a href="post.html">LEER MÁS</a>
@@ -139,7 +139,7 @@
                         </div>
 
                         <div class="blog-post-archives mb-100">
-                            <h5>Archives</h5>
+                            <h5>Archivos</h5>
                             <ul>
                                 <li><a href="#">Octubre 2018</a></li>
                                 <!--<li><a href="#">April 2018</a></li>
